Revision history for perl distribution Mojolicious-Plugin-AssetPack

0.65 Not Released
 - Add fixed mapping between moniker to packed files #64
 - Add EXPERIMENTAL support for "fallback_to_latest"
 - Add EXPERIMENTAL test_app() to ensure all assets are created
 - Changed headers() into a method
 - Remove EXPERIMENTAL support for reloader.js
 - Remove support for in-memory assets #64
 - Fix memory leak

0.64 2015-09-20T11:44:26+0200
 - Add "SHIPPING" section to Cookbook
 - Fix adding custom response headers when assets are already built #55
 - Fix always add newline to JavaScript assets to prevent issues with comments
 - Improved logging for in-memory assets
 - Improved error reporting when unable to build assets

0.63 2015-08-29T00:51:29+0200
 - Fix responding 404 when in-memory asset could not be found
 - Add support for custom response headers #55

0.62 2015-08-27T11:40:41-0400
 - Fix @import tracking #62

0.61 2015-08-23T13:34:34+0200
 - Add include_paths() to Scss preprocessor
 - Fix using SASS_PATH environment variable when calculating checksum #60
 - Deprecating asset->preprocessor() in favor of asset->preprocessors->add()

0.60 2015-08-20T17:21:54+0200
 - Fix detecting changed sass/scss files in sub directories, with leading underscore

0.59 2015-08-20T14:42:25+0200
 - Cannot look for packed files in "source_paths"
 - MOJO_ASSETPACK_DEBUG need to be set to "2" for more verbose debug

0.58 2015-08-09T14:28:04+0200
 - Change "source_paths" to return original reference and not a copy
 - Need to look for packed files in all directories (source_paths+public)

0.57 2015-08-09T11:34:21+0200
 - Add support for "source_paths" (EXPERIMENTAL) #58
 - Add support for fetching assets using a proxy

0.56 2015-08-05T10:44:15+0200
 - Add purge() method (EXPERIMENTAL)
 - Add support for wildcards in filenames (EXPERIMENTAL) #52

0.55 2015-05-25T12:58:04+0200
 - Will not add memory asset route if not needed #56
 - Make error visible regardless of page scroll position #57